# Spec

./: CMakeLists.txt  LICENSE  README.md  Specification_achilles.md
Implementation/: CMakeLists.txt  reference_implementation.cxx  validator.cxx
app/: CMakeLists.txt  HepMCNuEvtDump.cxx  HepMCNuEvtWriterTest.cxx  HepMCNuGenRunInfoDump.cxx
cmake/: HepMCSetup.cmake  NuHepMC-config.in  ROOTSetup.cmake  c++CompilerSetup.cmake  setup.sh.in
data/: atomic_mass_nist.txt  atomic_mass_nist_to_cpp.sh
docs/: Introduction.md  Specification.md
scripts/: NuHepMC_update_standard.py
scripts/test/: test.v0.9.0.hepmc3  test.v1.0.0.hepmc3
src/: CMakeLists.txt  Enums.hxx  GenEventReaderHelper.hxx  GenEventWriterHelper.hxx  GenRunInfoReaderHelper.cxx  GenRunInfoReaderHelper.hxx  GenRunInfoWriterHelper.cxx  GenRunInfoWriterHelper.hxx  Kinematics.cxx  Kinematics.hxx  NuEvtEnums.hxx  NuEvtHelper.cxx  NuEvtHelper.hxx  NuEvtKinematics.cxx  NuEvtKinematics.hxx  NuEvtPidCodes.hxx  NuEvtTools  NuEvtTopologies.cxx  NuEvtTopologies.hxx  ParticleStackReaderHelper.cxx  ParticleStackReaderHelper.hxx  PidCodes.hxx  PidTools.hxx  Print.hxx  ReaderRootTree.hxx  ReaderTools  StandardEnums.hxx  StringUtils.hxx  Topologies.cxx  Topologies.hxx  WriterRootTree.hxx  WriterTools  atomic_mass_nist.cxx  atomic_mass_nist.hxx
